--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Manish Kumar Sharma</h1>
+	<nav>Navigation Bar</nav>
+	<img alt = "Car Image" style = "height: 200px" src = "https://jlr.scene7.com/is/image/jlr/L66325GL_303103289_077">
+	<ul>
+		<li>Cycling</li>
+		<li>Playing Video Games</li>
+		<li>Traveling</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
