--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
 	<h1>Manish Kumar Sharma</h1>
 	<nav>Navigation Bar</nav>
 	<img alt = "Car Image" style = "height: 200px" src = "https://jlr.scene7.com/is/image/jlr/L66325GL_303103289_077">
-	<ul>
-		<li>Cycling</li>
-		<li>Playing Video Games</li>
+    <ul>
 		<li>Traveling</li>
+		<li>Listening Music</li>
+		<li>Playing Video Games</li>
 	</ul>
-    <script type="text/javascript" src="./script.js">
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
